; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/lib/libc/regex/extr_main.c_eprint.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/lib/libc/regex/extr_main.c_eprint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@eprint.epbuf = internal global [100 x i8] zeroinitializer, align 16
@REG_ITOA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @eprint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @eprint(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @REG_ITOA, align 4
  %5 = load i32, i32* %2, align 4
  %6 = or i32 %4, %5
  %7 = call i64 @regerror(i32 %6, i32* null, i8* getelementptr inbounds ([100 x i8], [100 x i8]* @eprint.epbuf, i64 0, i64 0), i32 100)
  store i64 %7, i64* %3, align 8
  %8 = load i64, i64* %3, align 8
  %9 = icmp ule i64 %8, 100
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  ret i8* getelementptr inbounds ([100 x i8], [100 x i8]* @eprint.epbuf, i64 0, i64 0)
}

declare dso_local i64 @regerror(i32, i32*, i8*, i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
